[package]
name = "pando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock = { path = "../bedrock" }
futures = "0.3"
glam = { version = "0.22.0", features = ["serde"] }
winit = "0.29.10"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
parking_lot = "0.12.1"
rust-embed = "8.2.0"
