[package]
name = "scene_viewer"
version = "0.1.0"
edition = "2018"

resolver = "2"

[dependencies]
renderer = { path = "../renderer" }
futures = "0.3" # Futures required to initialize async wgpu types
glam = { version = "0.22.0", features = ["serde"] } # Math library with nostd
winit = "0.28.3" # Window library for constructing a window and handling window events
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
notify = "5.1.0"
parking_lot = "0.12.1"
