[package]
name = "shader"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", package = "spirv-std" }
glam = { version = "0.22", default-features = false, features = ["libm", "bytemuck"] }
