[package]
name = "shader"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", package = "spirv-std", rev = "8678d58d61a78f01201ec854cb5e3835c014fa3b" }
glam = { version = "0.22.0", default-features = false, features = ["libm", "bytemuck"] }
