[package]
name = "vide"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
bedrock = { path = "../bedrock" }
anyhow = "1.0.70"
glam = { version = "0.22.0", features = ["serde"] }
ordered-float = "3.6.0"
futures = "0.3" # Futures required to initialize async wgpu types
winit = "0.28.3" # Window library for constructing a window and handling window events
