[package]
name = "shader"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
bytemuck = { workspace = true }
glam = { version = "0.27.0", default-features = false, features = ["libm", "bytemuck"] }
rust-embed = { workspace = true }
wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
notify-debouncer-full = "0.3.1"
