[package]
name = "shader"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
bytemuck = { workspace = true }
futures = { workspace = true }
glam = { version = "0.27.0", default-features = false, features = ["libm", "bytemuck"] }
log = { workspace = true }
notify-debouncer-full = "0.3.1"
rust-embed = { workspace = true }
wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
termcolor = "1.4.1"
codespan-reporting = "0.11.1"
